@@ -5,7 +5,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-  <meta name="generator" content="NanoBlogger 2.8a2" />
+  <meta name="generator" content="NanoBlogger CVS-2.9" />
   <meta name="robots" content="all" />
   <meta name="revisit-after" content="31 days" />
 
@@ -27,12 +27,10 @@
         <h2 class="date">January 18, 2004 5:12 PM</h2>
 
         <div class="blogbody">
-          <h3 class="title">Welcome to NanoBlogger!</h3>
+          <h3 class="title">Welcome to NanoBlogger!</h3><br />
 
           <div class="item-description">
-            <p>The basic syntax is: <code>nb [-b blogdir] [options]</code></p>
-
-            <p><b>How to ...</b></p>
+            <p>The basic syntax is: <code>nb [-b blogdir] [options]</code></p><b>How to ...</b>
 
             <ul>
               <li>create a new blog directory = <code>nb --blogdir [blog_dir] --add</code></li>
@@ -54,11 +52,11 @@
               <li>delete an old entry = <code>nb --delete [entry_id]</code></li>
 
               <li>specify a different blog directory = <code>nb --blogdir [blog_dir] [options]</code></li>
-            </ul>Thank you for trying NanoBlogger. Please direct comments and suggestions to the <a href=
+            </ul>
+
+            <p>Thank you for trying NanoBlogger. Please direct comments and suggestions to the <a href=
             "http://groups.yahoo.com/group/nanoblogger/">mailing list</a> or submit a bug report to the <a href=
-            "http://sourceforge.net/tracker/?atid=635240&amp;group_id=103576&amp;func=browse">project page</a> on
-            sourceforge.net.<br />
-            <br />
+            "http://sourceforge.net/tracker/?atid=635240&amp;group_id=103576&amp;func=browse">project page</a> on sourceforge.net.</p>
           </div>
         </div>
 
@@ -223,12 +221,12 @@
     <div class="side">
       Total entries: 1<br />
       Last entry: January 18, 2004 5:12 PM<br />
-      Last updated: June 17, 2004 7:30 PM
+      Last updated: June 21, 2004 10:32 PM
     </div>
 
     <div class="powered">
       Powered by<br />
-      <a href="http://home.columbus.rr.com/n1xt3r/nanoblogger/">NanoBlogger 2.8a2</a><br />
+      <a href="http://home.columbus.rr.com/n1xt3r/nanoblogger/">NanoBlogger CVS-2.9</a><br />
     </div>
   </div><br clear="all" />
 </body>
